# xl-utilities

./: .gitignore  LICENSE  README.md  pyproject.toml  useful.txt
tests/: MOCK_DATA.xlsx  dateManager.py  determinizer.py  formatter.py  init.py  pytest.ini  sorter.py
tests/demographics/: main.csv  main.json
tests/server/: app.py  buffer.rest
tests/server/static/js/: xlsx0-19-01.js
tests/server/templates/: index.html
xl_utility/: dateManager.py  determinizer.py  formatter.py  sorter.py
