[tool.poetry]
name = "xl_utility"
version = "0.2.2"
description = ""
authors = ["Ivan Alvarez <alvarivan88@gmail.com>"]
readme = "README.md"
packages = [{include = "xl_utility"}]
homepage = "https://github.com/Alvarian/xl-utilities"
repository = "https://github.com/Alvarian/xl-utilities"

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^2.1.2"
openpyxl = "^3.0.10"
pytest = "^7.2.0"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
names = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
